--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "serverless api for no-spoilers.net",
   "author": "Geoffrey Emerson <geoffrey.emerson.git@gmail.com>",
   "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/No-Spoilers/no-spoiler-service.git"
+  },
   "dependencies": {
-    "aws-sdk": "^2.761.0"
+    "@middy/core": "^1.4.0",
+    "@middy/http-error-handler": "^1.4.0",
+    "@middy/http-event-normalizer": "^1.4.0",
+    "@middy/http-json-body-parser": "^1.4.0",
+    "aws-sdk": "^2.761.0",
+    "http-errors": "^1.8.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
