--- a/src/seriesFunctions.yml
+++ b/src/seriesFunctions.yml
@@ -1,15 +1,29 @@
 SeriesFunctions:
 
   getSeries:
-    handler: functions/handlers/getSeries.handler
+    handler: src/handlers/getSeries.handler
     events:
       - http:
           method: GET
           path: /series
 
   postSeries:
-    handler: functions/handlers/postSeries.handler
+    handler: src/handlers/postSeries.handler
     events:
       - http:
           method: POST
           path: /series
+
+  patchSeries:
+    handler: src/handlers/patchSeries.handler
+    events:
+      - http:
+          method: PATCH
+          path: /series/{id}
+
+  # deleteSeries:
+  #   handler: src/handlers/deleteSeries.handler
+  #   events:
+  #     - http:
+  #         method: DELETE
+  #         path: /series/:id
