--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,8 @@ functions:
   postSeries: ${file(src/seriesFunctions.yml):SeriesFunctions.postSeries}
   patchSeries: ${file(src/seriesFunctions.yml):SeriesFunctions.patchSeries}
   deleteSeries: ${file(src/seriesFunctions.yml):SeriesFunctions.deleteSeries}
+  
+  postBook: ${file(src/bookFunctions.yml):BookFunctions.postBook}
 
 custom:
   SeriesTable:
