add book delete endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -37,6 +37,7 @@ functions:
   deleteSeries: ${file(src/seriesFunctions.yml):SeriesFunctions.deleteSeries}
   
   postBook: ${file(src/bookFunctions.yml):BookFunctions.postBook}
+  deleteBook: ${file(src/bookFunctions.yml):BookFunctions.deleteBook}
 
 custom:
   SeriesTable:
