delete entry endpoint cleanup

--- a/src/entryFunctions.yml
+++ b/src/entryFunctions.yml
@@ -12,4 +12,4 @@ EntryFunctions:
     events:
       - http:
           method: DELETE
-          path: /entry/{entryId}/book/{bookId}
+          path: /entry/{entryId}/series/{seriesId}
