--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@middy/http-error-handler": "^1.4.0",
     "@middy/http-event-normalizer": "^1.4.0",
     "@middy/http-json-body-parser": "^1.4.0",
+    "@middy/validator": "^1.5.0",
     "aws-sdk": "^2.761.0",
     "http-errors": "^1.8.0",
     "uuid": "^8.3.1"
