--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@middy/http-json-body-parser": "^1.4.0",
     "@middy/validator": "^1.5.0",
     "aws-sdk": "^2.761.0",
+    "bcryptjs": "^2.4.3",
     "http-errors": "^1.8.0",
     "uuid": "^8.3.1"
   },
