--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
     },
     "rules": {
         "no-console": "off",
-        "no-trailing-spaces": "error"
+        "no-trailing-spaces": "error",
+        "quote-props": ["error", "as-needed"],
+        "quotes": ["error", "single"]
     }
 }
