add secondary indexes to table

--- a/iam/NoSpoilersTableIAM.yml
+++ b/iam/NoSpoilersTableIAM.yml
@@ -9,3 +9,4 @@ NoSpoilersTableIAM:
     - dynamodb:DeleteItem 
   Resource: 
     - ${self:custom.NoSpoilersTable.arn}
+    - ${self:custom.NoSpoilersTable.indexes}
