--- a/resources/NoSpoilersTable.yml
+++ b/resources/NoSpoilersTable.yml
@@ -2,14 +2,45 @@ NoSpoilersTable:
   Type: AWS::DynamoDB::Table
   Properties:
     TableName: NoSpoilersTable-${self:provider.stage}
-    BillingMode: PAY_PER_REQUEST
     AttributeDefinitions:
       - AttributeName: primary_key
         AttributeType: S
       - AttributeName: sort_key
+        AttributeType: S
+      - AttributeName: createdBy
         AttributeType: S
     KeySchema:
       - AttributeName: primary_key
         KeyType: HASH
       - AttributeName: sort_key
         KeyType: RANGE
+    ProvisionedThroughput:
+      ReadCapacityUnits: '5'
+      WriteCapacityUnits: '5'
+    GlobalSecondaryIndexes:
+      - IndexName: ReverseLookup
+        KeySchema:
+        - AttributeName: sort_key
+          KeyType: HASH
+        - AttributeName: primary_key
+          KeyType: RANGE
+        Projection:
+          ProjectionType: ALL
+        ProvisionedThroughput:
+          ReadCapacityUnits: '5'
+          WriteCapacityUnits: '5'
+      - IndexName: UserContributionLookup
+        KeySchema:
+        - AttributeName: createdBy
+          KeyType: HASH
+        - AttributeName: primary_key
+          KeyType: RANGE
+        Projection:
+          ProjectionType: INCLUDE
+          NonKeyAttributes:
+          - sort_key
+          - name
+          - createdAt
+        ProvisionedThroughput:
+          ReadCapacityUnits: '5'
+          WriteCapacityUnits: '5'
