--- a/serverless.yml
+++ b/serverless.yml
@@ -8,7 +8,7 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs14.x
   memorySize: 256
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
@@ -42,3 +42,4 @@ custom:
   NoSpoilersTable:
     name: !Ref NoSpoilersTable
     arn: !GetAtt NoSpoilersTable.Arn
+    indexes: !Join [ '/', [!GetAtt NoSpoilersTable.Arn,index/*] ]
