add functions to track spoiler level

--- a/serverless.yml
+++ b/serverless.yml
@@ -39,6 +39,8 @@ functions:
   deleteUser: ${file(src/userFunctions.yml):UserFunctions.deleteUser}
   postLogin: ${file(src/userFunctions.yml):UserFunctions.postLogin}
 
+  postLevel: ${file(src/levelFunctions.yml):LevelFunctions.postLevel}
+  deleteLevel: ${file(src/levelFunctions.yml):LevelFunctions.deleteLevel}
 custom:
   NoSpoilersTable:
     name: !Ref NoSpoilersTable
