--- a/serverless.yml
+++ b/serverless.yml
@@ -33,7 +33,7 @@ functions:
   deleteBook: ${file(src/bookFunctions.yml):BookFunctions.deleteBook}
   
   postEntry: ${file(src/entryFunctions.yml):EntryFunctions.postEntry}
-  patchEntryList: ${file(src/entryFunctions.yml):EntryFunctions.patchEntryList}
+  patchEntry: ${file(src/entryFunctions.yml):EntryFunctions.patchEntry}
   deleteEntry: ${file(src/entryFunctions.yml):EntryFunctions.deleteEntry}
   
   postUser: ${file(src/userFunctions.yml):UserFunctions.postUser}
