--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
     "env": {
-        "commonjs": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "mocha": true
     },
     "extends": "eslint:recommended",
     "globals": {
@@ -10,13 +10,18 @@
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 2018,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
     "rules": {
         "no-console": "off",
         "no-trailing-spaces": "error",
         "quote-props": ["error", "as-needed"],
-        "quotes": ["error", "single"]
+        "quotes": ["error", "single"],
+        "no-var": "error",
+        "prefer-const": "error",
+        "comma-style": "error",
+        "object-curly-spacing": ["error", "always"],
+        "indent": ["error", 2, { "SwitchCase": 1 }]
     }
 }
