--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "serverless api for no-spoilers.net",
   "author": "Geoffrey Emerson <geoffrey.emerson.git@gmail.com>",
   "license": "UNLICENSED",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/No-Spoilers/no-spoiler-service.git"
+  },
+  "scripts": {
+    "test": "NODE_ENV=test c8 -r text-summary npm run test:base",
+    "test:coverage": "c8 --check-coverage npm run test:base",
+    "test:base": "mocha tests/**/*.test.js -r dotenv/config",
+    "package": "sls package"
   },
   "dependencies": {
     "@middy/core": "^1.4.0",
@@ -17,19 +24,29 @@
     "@middy/validator": "^1.5.0",
     "aws-sdk": "^2.761.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.0",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "newman": "^5.3.2",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "aws-sdk-mock": "^5.6.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "serverless-bundle": "^3.1.0",
-    "serverless-dotenv-plugin": "^3.1.0",
-    "serverless-pseudo-parameters": "^2.5.0",
-    "webpack": "^4.44.2"
+    "c8": "^7.11.0",
+    "chai": "^4.3.6",
+    "eslint": "^8.12.0",
+    "mocha": "^9.2.2",
+    "serverless": "^3.10.2",
+    "serverless-webpack": "^5.6.1",
+    "webpack": "^5.71.0"
+  },
+  "volta": {
+    "node": "14.19.1"
   }
 }
