--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,5 @@
-org: geoffreyemerson
-app: no-spoiler-service
 service: no-spoiler-service
-frameworkVersion: '3'
+frameworkVersion: '2'
 useDotenv: true
 
 provider:
@@ -10,6 +8,7 @@ provider:
   layers:
     - arn:aws:lambda:us-east-1:072686360478:layer:node-17_9_0:1
   memorySize: 256
+  lambdaHashingVersion: 20201221
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
   environment:
