drop serverless action script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,7 @@ jobs:
         node-version: 17.x
     - run: npm ci
     - name: serverless deploy
-      uses: serverless/github-action@v3
-      with:
-        args: deploy
+      run: npm run deploy
       env:
         # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
         # or if using AWS credentials directly
