--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,5 @@ jobs:
     - run: npm ci
     - name: run test suite
       run: npm test
+      env:
         TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
