--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "NODE_ENV=test c8 -r text-summary npm run test:base",
     "test:coverage": "c8 --check-coverage npm run test:base",
-    "test:base": "mocha tests/**/*.test.js -r dotenv/config",
+    "test:base": "mocha test/**/*.test.js -r dotenv/config",
     "test:e2e": "newman run postman_tests.json -e postman_environment.dev.json",
     "deploy": "sls deploy"
   },
@@ -38,6 +38,7 @@
     "eslint": "^8.12.0",
     "mocha": "^9.2.2",
     "newman": "^5.3.2",
+    "nyc": "^15.1.0",
     "serverless": "^3.12.0"
   },
   "volta": {
