--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "url": "https://github.com/No-Spoilers/no-spoiler-service.git"
   },
   "scripts": {
-    "test": "NODE_ENV=test c8 -r text-summary npm run test:base",
-    "test:coverage": "c8 --check-coverage npm run test:base",
+    "test": "NODE_ENV=test c8 -r text-summary pnpm run test:base",
+    "test:coverage": "c8 --check-coverage pnpm run test:base",
     "test:base": "mocha test/**/*.test.js -r dotenv/config",
     "test:e2e": "newman run postman_tests.json -e postman_environment.dev.json",
     "deploy": "sls deploy"
@@ -40,8 +40,5 @@
     "newman": "^5.3.2",
     "nyc": "^15.1.0",
     "serverless": "^3.12.0"
-  },
-  "volta": {
-    "node": "17.9.0"
   }
 }
