--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: volta-cli/action@v1
-      with:
-        node-version: 17.x
+    - uses: asdf-vm/actions/install@v1
     - run: npm ci
     - name: serverless deploy
       run: npm run deploy
