--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: volta-cli/action@v1
-      with:
-        node-version: 17.x
+    - uses: asdf-vm/actions/install@v1
     - run: npm ci
     - name: run test suite
       run: npm test
