--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "url": "https://github.com/No-Spoilers/no-spoiler-service.git"
   },
   "scripts": {
-    "test": "NODE_ENV=test c8 -r text-summary pnpm run test:base",
-    "test:coverage": "c8 --check-coverage pnpm run test:base",
+    "test": "NODE_ENV=test c8 -r text-summary npm run test:base",
+    "test:coverage": "c8 --check-coverage npm run test:base",
     "test:base": "mocha test/**/*.test.js -r dotenv/config",
     "test:e2e": "newman run postman_tests.json -e postman_environment.dev.json",
     "deploy": "sls deploy"
@@ -23,7 +23,6 @@
     "@middy/http-event-normalizer": "^1.4.0",
     "@middy/http-json-body-parser": "^1.4.0",
     "@middy/validator": "^1.5.0",
-    "aws-sdk": "^2.761.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "http-errors": "^1.8.0",
@@ -32,6 +31,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
+    "aws-sdk": "^2.761.0",
     "aws-sdk-mock": "^5.6.2",
     "c8": "^7.11.0",
     "chai": "^4.3.6",
