--- a/serverless.yml
+++ b/serverless.yml
@@ -4,9 +4,7 @@ useDotenv: true
 
 provider:
   name: aws
-  runtime: provided
-  layers:
-    - arn:aws:lambda:us-east-1:072686360478:layer:node-17_9_0:1
+  runtime: nodejs16.x
   memorySize: 256
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
