test post route for cors

--- a/src/rootFunctions.yml
+++ b/src/rootFunctions.yml
@@ -4,6 +4,6 @@ RootFunctions:
     handler: src/handlers/root/getRoot.handler
     events:
       - http:
-          method: GET
+          method: POST
           path: /
           cors: true
