--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: asdf-vm/actions/install@v1
-    - run: pnpm install
+    - run: npm install
     - name: serverless deploy
-      run: pnpm sls:deploy
+      run: npm run sls:deploy
       env:
         # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
         # or if using AWS credentials directly
