--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,8 @@ service: no-spoiler-service
 frameworkVersion: '4'
 useDotenv: true
 
+licenseKey: ${arn:aws:secretsmanager:us-east-1:392417943421:secret:SERVERLESS_LICENSE_KEY-CqQONR}
+
 provider:
   name: aws
   runtime: nodejs20.x
