--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
     name: deploy
     env:
       SERVERLESS_LICENSE_KEY: ${{ secrets.SERVERLESS_LICENSE_KEY }}
+      SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_LICENSE_KEY }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
@@ -25,4 +26,5 @@ jobs:
         else
           echo "SERVERLESS_LICENSE_KEY is not set."
         fi
+        npm run sls:login
         npm run sls:deploy
