--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,6 @@ jobs:
   deploy:
     name: deploy
     env:
-      SERVERLESS_LICENSE_KEY: ${{ secrets.SERVERLESS_LICENSE_KEY }}
-      SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_LICENSE_KEY }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
@@ -20,11 +18,4 @@ jobs:
     - uses: asdf-vm/actions/install@v4
     - run: npm install
     - name: serverless deploy
-      run: |
-        if [ -v SERVERLESS_LICENSE_KEY ]; then
-          echo "SERVERLESS_LICENSE_KEY is set."
-        else
-          echo "SERVERLESS_LICENSE_KEY is not set."
-        fi
-        npm run sls:login
-        npm run sls:deploy
+      run: npm run sls:deploy
