--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "url": "https://github.com/No-Spoilers/no-spoiler-service.git"
   },
   "scripts": {
+    "lint:fix": "eslint . --fix",
     "test": "NODE_ENV=test c8 -r text-summary npm run test:base",
     "test:coverage": "c8 --check-coverage npm run test:base",
     "test:base": "mocha test/**/*.test.js -r dotenv/config",
     "test:e2e": "newman run postman_tests.json -e postman_environment.dev.json",
-    "sls:deploy": "sls deploy",
-    "sls:login": "sls login"
+    "sls:deploy": "sls deploy"
   },
   "dependencies": {
     "@middy/core": "^1.4.0",
@@ -32,14 +32,16 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.0",
-    "aws-sdk-mock": "^5.6.2",
-    "c8": "^7.11.0",
-    "chai": "^4.3.6",
-    "eslint": "^8.12.0",
-    "mocha": "^9.2.2",
-    "newman": "^5.3.2",
-    "nyc": "^15.1.0",
+    "@eslint/js": "9.32.0",
+    "@types/chai": "5.2.2",
+    "aws-sdk-mock": "6.2.1",
+    "c8": "10.1.3",
+    "chai": "5.2.1",
+    "eslint": "9.32.0",
+    "globals": "16.3.0",
+    "mocha": "11.7.1",
+    "newman": "6.2.1",
+    "nyc": "17.1.0",
     "serverless": "^4.17.2"
   }
 }
