--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "no-spoiler-service",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "serverless api for no-spoilers.net",
   "author": "Geoffrey Emerson <geoffrey.emerson.git@gmail.com>",
   "license": "UNLICENSED",
@@ -25,11 +25,10 @@
     "@middy/http-json-body-parser": "6.4.1",
     "@middy/validator": "6.4.1",
     "aws-sdk": "^2.761.0",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.0",
-    "http-errors": "^1.8.0",
-    "jsonwebtoken": "^8.5.1",
-    "uuid": "^8.3.1"
+    "bcryptjs": "3.0.2",
+    "dotenv": "17.2.1",
+    "http-errors": "2.0.0",
+    "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
     "@eslint/js": "9.32.0",
