--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sls:deploy": "sls deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.859.0",
     "@middy/core": "6.4.1",
     "@middy/http-cors": "6.4.1",
     "@middy/http-error-handler": "6.4.1",
