--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@middy/http-event-normalizer": "6.4.1",
     "@middy/http-json-body-parser": "6.4.1",
     "@middy/validator": "6.4.1",
-    "aws-sdk": "^2.761.0",
     "bcryptjs": "3.0.2",
     "dotenv": "17.2.1",
     "http-errors": "2.0.0",
@@ -34,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "9.32.0",
     "@types/chai": "5.2.2",
+    "aws-sdk-client-mock": "^4.1.0",
     "aws-sdk-mock": "6.2.1",
     "c8": "10.1.3",
     "chai": "5.2.1",
