--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
   },
   "scripts": {
     "lint:fix": "eslint . --fix",
+    "lint": "eslint .",
     "test": "NODE_ENV=test c8 -r text-summary npm run test:base",
     "test:coverage": "c8 --check-coverage npm run test:base",
     "test:base": "mocha test/**/*.test.js -r dotenv/config",
     "test:e2e": "newman run postman_tests.json -e postman_environment.dev.json",
+    "test:watch": "mocha test/**/*.test.js -r dotenv/config --watch",
+    "dev": "NODE_ENV=development sls offline start",
+    "build": "sls package",
+    "deploy": "sls deploy",
+    "deploy:prod": "sls deploy --stage prod",
+    "remove": "sls remove",
+    "info": "sls info",
+    "logs": "sls logs -f",
     "sls:deploy": "sls deploy"
   },
   "dependencies": {
@@ -40,7 +49,7 @@
     "eslint": "9.32.0",
     "globals": "16.3.0",
     "mocha": "11.7.1",
-    "newman": "6.2.1",
+    "newman": "^6.2.0",
     "nyc": "17.1.0",
     "serverless": "^4.17.2"
   }
