--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "scripts": {
     "lint:fix": "eslint . --fix",
     "lint": "eslint .",
+    "type-check": "tsc --noEmit",
+    "build:ts": "tsc",
+    "build:clean": "rm -rf dist",
+    "build": "pnpm run build:clean && pnpm run build:ts && sls package",
     "test": "NODE_ENV=test c8 -r text-summary pnpm run test:base",
     "test:coverage": "c8 --check-coverage pnpm run test:base",
-    "test:base": "mocha test/**/*.test.js -r dotenv/config",
+    "test:base": "pnpm run build:ts && mocha --require dotenv/config dist/test/**/*.test.js",
     "test:e2e": "newman run postman_tests.json -e postman_environment.dev.json",
-    "test:watch": "mocha test/**/*.test.js -r dotenv/config --watch",
+    "test:watch": "pnpm run build:ts && mocha --require dotenv/config dist/test/**/*.test.js --watch",
     "dev": "NODE_ENV=development sls offline start",
-    "build": "sls package",
     "deploy": "sls deploy",
     "deploy:prod": "sls deploy --stage prod",
     "remove": "sls remove",
@@ -41,7 +44,15 @@
   },
   "devDependencies": {
     "@eslint/js": "9.34.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/chai": "5.2.2",
+    "@types/http-errors": "^2.0.5",
+    "@types/json-schema": "^7.0.15",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^24.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
     "aws-sdk-client-mock": "^4.1.0",
     "aws-sdk-mock": "6.2.1",
     "c8": "10.1.3",
@@ -51,6 +62,8 @@
     "mocha": "11.7.1",
     "newman": "^6.2.1",
     "nyc": "17.1.0",
-    "serverless": "^4.18.1"
+    "serverless": "^4.18.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
