fix minor issues

--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "lint:fix": "eslint . --fix",
     "lint": "eslint .",
     "type-check": "tsc --noEmit",
-    "build:ts": "tsc",
-    "build:clean": "rm -rf dist",
-    "build": "pnpm run build:clean && pnpm run build:ts && sls package",
+    "build": "tsc",
+    "build:clean": "rm -rf dist && pnpm run build && sls package",
     "test": "NODE_ENV=test c8 -r text-summary pnpm run test:base",
     "test:coverage": "c8 --check-coverage pnpm run test:base",
-    "test:base": "pnpm run build:ts && mocha --require dotenv/config dist/test/**/*.test.js",
+    "test:base": "pnpm run build && mocha --require dotenv/config dist/test/**/*.test.js",
     "test:e2e": "newman run postman_tests.json -e postman_environment.dev.json",
-    "test:watch": "pnpm run build:ts && mocha --require dotenv/config dist/test/**/*.test.js --watch",
+    "test:watch": "pnpm run build && mocha --require dotenv/config dist/test/**/*.test.js --watch",
     "dev": "NODE_ENV=development sls offline start",
     "deploy": "sls deploy",
     "deploy:prod": "sls deploy --stage prod",
