--- a/package.json
+++ b/package.json
@@ -29,40 +29,44 @@
     "sls:deploy": "sls deploy"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.873.0",
-    "@middy/core": "6.4.3",
-    "@middy/http-cors": "6.4.3",
-    "@middy/http-error-handler": "6.4.3",
-    "@middy/http-event-normalizer": "6.4.3",
-    "@middy/http-json-body-parser": "6.4.3",
-    "@middy/validator": "6.4.3",
+    "@aws-sdk/client-dynamodb": "3.883.0",
+    "@middy/core": "6.4.4",
+    "@middy/http-cors": "6.4.4",
+    "@middy/http-error-handler": "6.4.4",
+    "@middy/http-event-normalizer": "6.4.4",
+    "@middy/http-json-body-parser": "6.4.4",
+    "@middy/validator": "6.4.4",
     "bcryptjs": "3.0.2",
-    "dotenv": "17.2.1",
+    "dotenv": "17.2.2",
     "http-errors": "2.0.0",
     "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "9.34.0",
-    "@types/bcryptjs": "^3.0.0",
+    "@eslint/js": "9.35.0",
+    "@types/aws-lambda": "8.10.152",
+    "@types/bcryptjs": "3.0.0",
     "@types/chai": "5.2.2",
-    "@types/http-errors": "^2.0.5",
-    "@types/json-schema": "^7.0.15",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^24.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.40.0",
-    "@typescript-eslint/parser": "^8.40.0",
-    "aws-sdk-client-mock": "^4.1.0",
+    "@types/http-errors": "2.0.5",
+    "@types/json-schema": "7.0.15",
+    "@types/jsonwebtoken": "9.0.10",
+    "@types/mocha": "10.0.10",
+    "@types/node": "24.3.1",
+    "@typescript-eslint/eslint-plugin": "8.42.0",
+    "@typescript-eslint/parser": "8.42.0",
+    "aws-sdk-client-mock": "4.1.0",
     "aws-sdk-mock": "6.2.1",
     "c8": "10.1.3",
     "chai": "6.0.1",
-    "eslint": "9.34.0",
+    "eslint": "9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "globals": "16.3.0",
-    "mocha": "11.7.1",
-    "newman": "^6.2.1",
+    "mocha": "11.7.2",
+    "newman": "6.2.1",
     "nyc": "17.1.0",
-    "serverless": "^4.18.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "prettier": "3.6.2",
+    "serverless": "4.18.2",
+    "ts-node": "10.9.2",
+    "typescript": "5.9.2"
   }
 }
