--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "type-check": "tsc --noEmit",
     "build": "tsc",
     "build:clean": "rm -rf dist && pnpm run build && sls package",
-    "test": "NODE_ENV=test c8 -r text-summary pnpm run test:base",
+    "test": "c8 -r text-summary pnpm run test:base",
     "test:coverage": "c8 --check-coverage pnpm run test:base",
-    "test:base": "pnpm run build && mocha --require dotenv/config dist/test/**/*.test.js",
+    "test:base": "NODE_ENV=test mocha --require dotenv/config test/**/*.test.ts",
     "test:e2e": "newman run postman_tests.json -e postman_environment.dev.json",
     "test:watch": "pnpm run build && mocha --require dotenv/config dist/test/**/*.test.js --watch",
     "dev": "NODE_ENV=development sls offline start",
@@ -67,6 +67,7 @@
     "prettier": "3.6.2",
     "serverless": "4.18.2",
     "ts-node": "10.9.2",
+    "tsx": "4.20.5",
     "typescript": "5.9.2"
   }
 }
