--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
     "type-check": "tsc --noEmit",
     "build": "tsc",
     "build:clean": "rm -rf dist && pnpm run build && sls package",
-    "test": "c8 -r text-summary pnpm run test:base",
-    "test:coverage": "c8 --check-coverage pnpm run test:base",
-    "test:base": "NODE_ENV=test mocha --require dotenv/config test/**/*.test.ts",
-    "test:e2e": "newman run postman_tests.json -e postman_environment.dev.json",
-    "test:watch": "pnpm run build && mocha --require dotenv/config dist/test/**/*.test.js --watch",
+    "test": "vitest",
     "dev": "NODE_ENV=development sls offline start",
     "deploy": "sls deploy",
     "deploy:prod": "sls deploy --stage prod",
@@ -29,45 +25,39 @@
     "sls:deploy": "sls deploy"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "3.883.0",
-    "@middy/core": "6.4.4",
-    "@middy/http-cors": "6.4.4",
-    "@middy/http-error-handler": "6.4.4",
-    "@middy/http-event-normalizer": "6.4.4",
-    "@middy/http-json-body-parser": "6.4.4",
-    "@middy/validator": "6.4.4",
+    "@aws-sdk/client-dynamodb": "3.893.0",
+    "@middy/core": "6.4.5",
+    "@middy/http-cors": "6.4.5",
+    "@middy/http-error-handler": "6.4.5",
+    "@middy/http-event-normalizer": "6.4.5",
+    "@middy/http-json-body-parser": "6.4.5",
+    "@middy/validator": "6.4.5",
     "bcryptjs": "3.0.2",
     "dotenv": "17.2.2",
     "http-errors": "2.0.0",
     "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "9.35.0",
+    "@eslint/js": "9.36.0",
     "@types/aws-lambda": "8.10.152",
     "@types/bcryptjs": "3.0.0",
-    "@types/chai": "5.2.2",
     "@types/http-errors": "2.0.5",
     "@types/json-schema": "7.0.15",
     "@types/jsonwebtoken": "9.0.10",
-    "@types/mocha": "10.0.10",
-    "@types/node": "24.3.1",
-    "@typescript-eslint/eslint-plugin": "8.42.0",
-    "@typescript-eslint/parser": "8.42.0",
+    "@types/node": "24.5.2",
+    "@typescript-eslint/eslint-plugin": "8.44.0",
+    "@typescript-eslint/parser": "8.44.0",
     "aws-sdk-client-mock": "4.1.0",
     "aws-sdk-mock": "6.2.1",
-    "c8": "10.1.3",
-    "chai": "6.0.1",
-    "eslint": "9.35.0",
+    "eslint": "9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "globals": "16.3.0",
-    "mocha": "11.7.2",
+    "eslint-plugin-vitest": "^0.5.4",
+    "globals": "16.4.0",
     "newman": "6.2.1",
-    "nyc": "17.1.0",
     "prettier": "3.6.2",
-    "serverless": "4.18.2",
-    "ts-node": "10.9.2",
-    "tsx": "4.20.5",
-    "typescript": "5.9.2"
+    "serverless": "4.19.1",
+    "typescript": "5.9.2",
+    "vitest": "^3.2.4"
   }
 }
