--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,46 +1,27 @@
 {
-  "include": [ "./src" ],
+  "include": [
+    "."
+  ],
   "compilerOptions": {
+    "noEmit": true,
     "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "nodenext",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "allowJs": true,
     "checkJs": false,
-    "outDir": "./dist",
     "rootDir": ".",
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "removeComments": false,
-    "noEmitOnError": true,
-    "incremental": true,
-    "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "exclude": [
-    "test",
-    "node_modules",
-    "dist",
-    "build",
-    "coverage",
     ".github",
+    ".vscode",
     "bruno",
-    "iam"
-  ],
-  "ts-node": {
-    "esm": true,
-    "experimentalSpecifierResolution": "node"
-  }
+    "lambda",
+    "node_modules",
+    "test",
+    "coverage"
+  ]
 }
