--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,11 @@ jobs:
       TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: asdf-vm/actions/install@v4
-    - name: install dependencies
-      run: npm install
-    - name: run tests
-      run: npm test
-    - name: serverless deploy
-      run: npm run sls:deploy
+      - uses: actions/checkout@v4
+      - uses: asdf-vm/actions/install@v4
+      - name: install dependencies
+        run: pnpm install
+      - name: run tests
+        run: pnpm test
+      - name: serverless deploy
+        run: pnpm run sls:deploy
